# tracker-api

./: .gitignore  Cargo.toml  Dockerfile  Makefile
src/: config.rs  main.rs
src/api/: app.rs  handlers.rs  health.rs  index.rs  message.rs  mod.rs  segment.rs  server.rs
src/api/handlers/: health.rs  index.rs  segment.rs
src/config/: config.rs
src/handlers/: mod.rs
src/web/: health.rs  mod.rs
