[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde_json = "1.0.95"
serde = {version = "1.0.160", features = ["derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rdkafka = "0.29.0"
simple-log = "1.6.0"
toml = "0.7.3"