[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
serde_json = "1.0.106"
serde = {version = "1.0.188", features = ["derive"]}
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
rdkafka = "0.34.0"
simple-log = "1.6.0"
toml = "0.8.0"