[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
rdkafka = "0.36"
simple-log = "1.9"
toml = "0.8"